// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VLazy should match a snapshot 1`] = `
<div class="v-lazy">
</div>
`;

exports[`VLazy should match a snapshot 2`] = `
<div class="v-lazy">
  <transition-stub>
    <div>
      foobar
    </div>
  </transition-stub>
</div>
`;

exports[`VLazy should match a snapshot 3`] = `
<div class="v-lazy">
</div>
`;
